k8s/talos/apps/batmotor-storehaug/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: batmotor-storehaug
  namespace: batmotor-storehaug
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-public
      namespace: traefik
  hostnames:
    - batmotor-storehaug.bigd.no
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: batmotor-storehaug-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
