k8s/talos/apps/batmotor-storehaug/ciliumnetworkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: batmotor-storehaug-policy
  namespace: batmotor-storehaug
spec:
  endpointSelector:
    matchLabels:
      app: batmotor-storehaug
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
            "k8s:app.kubernetes.io/instance": traefik-traefik
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEntities:
        - host
        - health
